<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.tresty</groupId>
	<artifactId>tresty-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>tresty-parent</name>
	<description>tresty-parent</description>
	<url>https://github.com/tijanssen/tresty</url>
	<inceptionYear>2025</inceptionYear>
	<organization>
		<name>Timo Janssen</name>
		<url>https://github.com/tijanssen/</url>
	</organization>
	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>tijanssen</id>
			<name>Timo Janssen</name>
			<email>timo.janssen357@gmail.com</email>
		</developer>
	</developers>
	<scm child.scm.url.inherit.append.path="false">
		<connection>scm:git:https://github.com/tijanssen/tresty.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/tijanssen/tresty.git</developerConnection>
		<url>https://github.com/tijanssen/tresty</url>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/tijanssen/tresty/issues</url>
	</issueManagement>
	<ciManagement>
		<system>github</system>
		<url>https://github.com/tijanssen/tresty/actions</url>
	</ciManagement>
	<distributionManagement>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Nexus Release Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<site>
			<id>github</id>
			<url>scm:git:ssh://git@github.com/tijanssen/tresty.git</url>
		</site>
	</distributionManagement>
	<properties>
		<deploy_install.version>3.1.4</deploy_install.version>
		<java.version>21</java.version>
		<license.failOnMissingHeader>false</license.failOnMissingHeader>
		<license.failOnNotUptodateHeader>false</license.failOnNotUptodateHeader>
		<pmd.failOnViolation>false</pmd.failOnViolation>
		<pmd.version>7.15.0</pmd.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<spotbugs.failOnError>false</spotbugs.failOnError>
		<surefire.version>3.5.3</surefire.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jspecify</groupId>
				<artifactId>jspecify</artifactId>
				<version>1.0.0</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>5.13.3</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>3.27.3</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>5.18.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>5.18.0</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.0</version>
					<configuration>
						<release>${java.version}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire.version}</version>
					<configuration>
						<argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.11.2</version>
					<configuration>
						<release>${java.version}</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jxr-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>3.5.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.8.1</version>
					<executions>
						<execution>
							<id>dependency-properties</id>
							<goals>
								<goal>properties</goal>
							</goals>
							<phase>initialize</phase>
						</execution>
						<execution>
							<goals>
								<goal>analyze</goal>
							</goals>
							<phase>verify</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.13</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<id>jacoco-prepare-agent</id>
							<phase>initialize</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.pitest</groupId>
					<artifactId>pitest-maven</artifactId>
					<version>1.20.0</version>
					<dependencies>
						<dependency>
							<groupId>org.pitest</groupId>
							<artifactId>pitest-junit5-plugin</artifactId>
							<version>1.2.3</version>
						</dependency>
					</dependencies>
					<configuration>
						<exportLineCoverage>true</exportLineCoverage>
						<mutators>
							<mutator>STRONGER</mutator>
						</mutators>
						<outputFormats>HTML,XML</outputFormats>
						<verbosity>QUIET</verbosity>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>mutationCoverage</goal>
							</goals>
							<phase>verify</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${deploy_install.version}</version>
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${deploy_install.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>3.27.0</version>
					<dependencies>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-core</artifactId>
							<version>${pmd.version}</version>
						</dependency>
						<dependency>
							<groupId>net.sourceforge.pmd</groupId>
							<artifactId>pmd-java</artifactId>
							<version>${pmd.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<skip>true</skip>
						<analysisCache>true</analysisCache>
						<benchmark>true</benchmark>
						<failOnViolation>${pmd.failOnViolation}</failOnViolation>
						<minimumPriority>5</minimumPriority>
						<targetJdk>${java.version}</targetJdk>
					</configuration>
					<executions>
						<execution>
							<id>pmd-check</id>
							<goals>
								<goal>check</goal>
							</goals>
							<phase>verify</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.9.3.2</version>
					<configuration>
						<skip>true</skip>
						<effort>Default</effort>
						<failOnError>${spotbugs.failOnError}</failOnError>
						<threshold>Default</threshold>
					</configuration>
					<executions>
						<execution>
							<id>spotbugs-check</id>
							<goals>
								<goal>check</goal>
							</goals>
							<phase>verify</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.6.0</version>
					<configuration>
						<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
						<licenseName>mit</licenseName>
					</configuration>
					<executions>
						<execution>
							<id>license-check-file-header</id>
							<goals>
								<goal>check-file-header</goal>
							</goals>
							<phase>verify</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.6.0</version>
					<configuration>
						<configLocation>${basedir}/../config/checkstyle/checkstyle.xml</configLocation>
						<includeTestSourceDirectory>true</includeTestSourceDirectory>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>com.puppycrawl.tools</groupId>
							<artifactId>checkstyle</artifactId>
							<version>10.26.1</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.21.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.9.0</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.18.0</version>
			</plugin>
		</plugins>
	</reporting>
</project>
